[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "performance-profiler"
version = "0.1.0"
description = "Automated code performance profiler for Python functions and scripts."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "PerformanceProfiler Team" }
]
dependencies = [
  "psutil>=5.9.0"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.scripts]
perfprof = "performance_profiler.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["performance_profiler*"]
